--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="main-login">
             <article class="left-login">
                 <span class="text-card">
-                    <h1>Vamos embarcar,</h1>
+                    <h1>Vamos embarcar</h1>
                     <h2>Nessa Jornada!</h2>
                     <figure class="img-login">
                         <img src="img/online-tech-talks-animate.svg" class="left-login-image" alt="">
@@ -28,13 +28,13 @@
                     <h1>LOGIN</h1>
                     <span class="textfield">
                         <label for="usuario">Usuário</label>
-                        <input type="text" name="usuario" placeholder="Usuário">
+                        <input type="text" name="usuario" >
                     </span>
                     <span class="textfield">
                         <label for="senha">Senha</label>
-                        <input type="password" name="senha" placeholder="Senha">
+                        <input type="password" name="senha" >
                     </span>
-                    <button> <span>LOGIN</span>
+                    <button> <span>ENTRAR</span>
                     </button>
                 </article>
             </section>
