--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                     <h1>LOGIN</h1>
                     <span class="textfield">
                         <label for="usuario">Usuário</label>
-                        <input type="text" name="usuario" >
+                        <input type="text" name="usuario" placeholder="Seu usuário" required >
                     </span>
                     <span class="textfield">
                         <label for="senha">Senha</label>
-                        <input type="password" name="senha" >
+                        <input type="password" name="senha" placeholder="Sua senha" required >
                     </span>
-                    <button> <span>ENTRAR</span>
+                    <button type="submit"> <span>ENTRAR</span>
                     </button>
                 </article>
             </section>
